# vibrasim

./: .gitignore  ANALYSIS.md  CLAUDE.md  LOGBOOK.md  Makefile  README.md  corpus.candidate.yaml  corpus.synthetic.yaml  corpus.training-EN.yaml  docker-compose.yml  pyproject.toml
agent/: __init__.py  audio_io.py  autonomous_loop.py  babble.py  convergence.py  corpus_audio_feeder.py  corpus_builder.py  curriculum_scheduler.py  decoder_audio.py  demo.py  encoder_audio.py  encoder_video.py  evaluate_babble.py  library.py  loop.py  reward.py  run_autonomous.py  run_babble_experiment.py  run_negative_control.py  speak.py  talk.py  video_io.py  youtube_feeder.py
app/: autonomous_monitor.py  db.py  machine_gui.py  main.py  realtime_gui.py  report.py  snapshot_import.py  ui.py  viewer.py
db/: README.md  schema.sql
docker/: streamlit.Dockerfile
docs/: CALIBRATION_GUIDE.md  CONCEPT.md  Konzeptpapier.de.md  Konzeptpapier.docx  RESEARCH_GUIDE.md  TUTORIAL.md  marker_protocol.md  marker_protocol_G20-G23_addendum.md  predictive-babble.md  ~$nzeptpapier.docx
files/: README.de.md  README.md  SKILL.de.md  SKILL.md  SPECIFICATION.md  SPEZIFIKATION.md
renders/: animation_config.toml  calibration_phase2_acceptance.toml  calibration_session3.toml  calibration_session3b_molecules.toml
scripts/: R8_diag.py  R8_measure.py  r14_sensitivity_sweep.py
sweeps/: v2-r2-sweep.jsonl
tests/: acceptance.toml  calibration_smoke.py  conftest.py  test_agent_loop_stepped.py  test_agent_m4_glass_of_water.py  test_agent_m4_minimal_smoke.py  test_agent_m5_reward_shaping.py  test_agent_realtime_smoke.py  test_ambient.py  test_amendment_AP_behavioural_equivalence.py  test_amendment_AP_jit_correctness.py  test_amendment_AP_performance.py  test_amendment_AP_slot_recycling_correctness.py  test_amendment_AP_slot_recycling_plateau.py  test_amendment_AP_upgrade_arrays.py  test_amendment_G13_bidirectional.py  test_amendment_G14_btsp.py  test_amendment_G15_dream.py  test_amendment_G16_self_aware.py  test_amendment_G17_autonomous.py  test_amendment_G1_bind_vibrations_jit.py  test_amendment_G3_synaptic_post_search.py  test_amendment_G4_emit_pair_band.py  test_amendment_G6_bridge_atom_propagation.py  test_amendment_PHASE3R1_molecule_fusion.py  test_amendment_R1_recycling_regen.py  test_amendment_R2_strength_decay.py  test_amendment_speech_loop.py  test_amendment_stdp_asymmetric_plasticity.py  test_amendment_stdp_orientation_update.py  test_amendment_stdp_pair_detection.py  test_amendment_stdp_snapshot.py  test_amendment_synaptic_transmission.py  test_audio_io_closed_loop.py  test_audio_io_injection.py  test_audio_io_read.py  test_audio_io_round_trip.py  test_audio_io_tonotopic.py  (+56 more)
(+199 files in other folders)
