[project]
name = "world"
version = "0.1.0"
description = "World of Vibrations — a simulated physical substrate built from vibrations alone."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Michael Kupermann", email = "michael@kupermann.com" }]
dependencies = [
    "numpy >= 1.26",
    "numba >= 0.61",
    "pygame >= 2.5",
]

[project.optional-dependencies]
dev = ["pytest >= 8.0"]

[project.scripts]
world = "world.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
