[project]
name = "world"
version = "0.2.0"
description = "World of Vibrations — 3D physics simulator toward emergent brain-like structure (Phase 1 v2)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Michael Kupermann", email = "michael@kupermann.com" }]
dependencies = [
    "numpy >= 1.26",
    "numba >= 0.61",
    "pyvista >= 0.45",
    "optuna >= 4.0",
]

[project.optional-dependencies]
dev = ["pytest >= 8.0", "matplotlib >= 3.8"]

[project.scripts]
world = "world.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
