[project]
name = "world"
version = "0.2.0"
description = "World of Vibrations — 3D physics simulator toward emergent brain-like structure (Phase 1 v2)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Michael Kupermann", email = "michael@kupermann.com" }]
dependencies = [
    "numpy >= 1.26, <3.0",
    "numba >= 0.61, <0.70",
    "pyvista >= 0.45, <1.0",
    "optuna >= 4.0, <5.0",
]

[project.optional-dependencies]
dev = ["pytest >= 8.0", "matplotlib >= 3.8", "scipy >= 1.11, < 2.0"]
dashboard = [
    "streamlit >= 1.40",
    "psycopg[binary] >= 3.2",
    "pandas >= 2.2",
    "reportlab >= 4.2",
    "plotly >= 5.24",
]
agent = [
    "sounddevice>=0.4,<1.0",
    "opencv-python-headless>=4.9,<5.0",
]

[project.scripts]
world = "world.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (long-running integration/acceptance tests)",
]
